# 20250830_lanchain_practice

./: README.md  calculator.ipynb  christmas_tree.ipynb  main.py  pi_calculator.ipynb  pyproject.toml  test_debug.py
.cursor/rules/: langchain-class.mdc  my-rules.mdc
lesson1/: lesson1_2.ipynb  python_basics_variables_math.md
lesson2/: README2.md  lesson2_1.ipynb  lesson2_2.ipynb  條件判斷和迴圈.md
lesson3/: lesson3_1.ipynb
lesson4/: agents.md  lesson4_1.ipynb  lesson4_2.py
lesson5/: lesson5_1.ipynb  lesson5_5.ipynb  lesson5_6.ipynb  lesson5_7.py
lesson6/: lesson6_1.ipynb  lesson6_3.ipynb  lesson6_4.ipynb  lesson6_5.ipynb
lesson7/: lesson7_1.ipynb
lesson7/db/chroma_db_v3/: chroma.sqlite3
